tests/invalids/beginMisspell.gt
proc main ()
    int m;
bgine
    m := n;
end
